k8s/apps/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-api
  namespace: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homelab-api
  template:
    metadata:
      labels:
        app: homelab-api
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: api
          image: joshdarcy/homelab-api:v2
          ports:
            - containerPort: 8000
