k8s/apps/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homelab-api
  namespace: database
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: homelab-api
