k8s/apps/api/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-api-ingress
  namespace: database
  cert-manager.io/cluster-issuer: "letsencrypt-prod"
  nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.joshdarcy.xyz
      secretName: api-joshdarcy-tls
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab-api
                port:
                  number: 80
